kubernetes/apps/home-automation/frigate-nvr/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frigate
  namespace: home-automation
  annotations:
    external-dns.alpha.kubernetes.io/target: "external.${SECRET_DOMAIN}"
    meta.helm.sh/release-name: frigate
    meta.helm.sh/release-namespace: home-automation
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "Frigate NVR"
    gethomepage.dev/description: "Frigate NVR is a home surveillance system"
    gethomepage.dev/group: "Home Automation"
    gethomepage.dev/icon: "frigate.png"
    # Authentik forward auth annotations
    nginx.ingress.kubernetes.io/auth-url: "http://ak-outpost-frigate-forward-auth.kube-system.svc.cluster.local:9000/outpost.goauthentik.io/auth/nginx"
    nginx.ingress.kubernetes.io/auth-signin: "https://frigate.${SECRET_DOMAIN}/outpost.goauthentik.io/start?rd=$escaped_request_uri"
    nginx.ingress.kubernetes.io/auth-response-headers: "Set-Cookie,X-authentik-username,X-authentik-groups,X-authentik-email,X-authentik-name,X-authentik-uid"
    nginx.ingress.kubernetes.io/auth-snippet: |
      proxy_set_header X-Forwarded-Host $http_host;
      proxy_set_header X-Proxy-Secret a12644bc9bebd49f58f487d3f4751f3f8cf31843b63a23d0a17609080513189a625c80c62e6b1fe8967f3e27d5a8c054ff28259122434753de0eb29e47b6e2d4;
  labels:
    gethomepage.dev/enabled: "true"
spec:
  ingressClassName: external
  tls:
    - hosts:
        - "frigate.${SECRET_DOMAIN}"
  rules:
    - host: "frigate.${SECRET_DOMAIN}"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frigate
                port:
                  number: 5000
